--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -58,4 +58,10 @@
         -->
         <attr name="settingValues" format="reference" />
     </declare-styleable>
+
+    <declare-styleable name="SettingSeekBarPreference">
+        <!-- SeekBar attributes -->
+        <attr name="min" format="integer" />
+        <attr name="max" format="integer" />
+    </declare-styleable>
 </resources>
