KryptonSettings: added toggles for navbar inversion and volume button music control
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/miscellaneous_settings.xml
+++ b/res/xml/miscellaneous_settings.xml
@@ -24,4 +24,12 @@
         android:key="gamingmode"
         android:title="@string/gamingmode_settings_title"
         android:summary="@string/gamingmode_settings_summary" />
+
+    <!-- Volume key music control -->
+    <com.krypton.settings.preference.SettingSwitchPreference
+        android:key="volume_button_music_control_switch_preference"
+        android:title="@string/volume_button_music_control_title"
+        android:summary="@string/volume_button_music_control_summary"
+        settings:settingKey="volume_button_music_control"
+        settings:settingNamespace="system" />
 </PreferenceScreen>
