--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -54,4 +54,13 @@
         settings:settingKey="keygaurd_media_art"
         settings:settingNamespace="system" />
 
+    <!-- Smart Space -->
+    <com.krypton.settings.preference.SettingSwitchPreference
+        android:key="smart_space_switch_preference"
+        android:title="@string/smart_space_setting_title"
+        android:summary="@string/smart_space_setting_summary"
+        settings:settingKey="smart_space"
+        settings:settingNamespace="system"
+        settings:settingDefault="1" />
+
 </PreferenceScreen>
