--- a/res/layout/fod_list_item.xml
+++ b/res/layout/fod_list_item.xml
@@ -14,12 +14,13 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="@dimen/fod_list_item_size"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/fod_list_item_size"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerInside" />
 </LinearLayout>
