--- a/res/layout/gamingmode_apps_list_item.xml
+++ b/res/layout/gamingmode_apps_list_item.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -24,8 +24,8 @@
         android:layout_height="@dimen/app_icon_size"
         android:layout_marginStart="@dimen/default_margin"
         android:layout_marginTop="@dimen/default_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        settings:layout_constraintStart_toStartOf="parent"
+        settings:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -35,16 +35,16 @@
         android:layout_marginStart="@dimen/default_margin"
         android:textSize="16sp"
         android:fontFamily="@*android:string/config_bodyFontFamily"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        settings:layout_constraintBottom_toBottomOf="@+id/imageView"
+        settings:layout_constraintStart_toEndOf="@+id/imageView"
+        settings:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/default_margin"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        settings:layout_constraintBottom_toBottomOf="@+id/imageView"
+        settings:layout_constraintEnd_toEndOf="parent"
+        settings:layout_constraintTop_toTopOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
