--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -50,10 +50,10 @@
     </string-array>
 
     <string-array name="ambient_pulse_color_modes">
-        <item>@string/pulse_color_mode_accent</item>
-        <item>@string/pulse_color_mode_wallpaper</item>
-        <item>@string/pulse_color_mode_notification</item>
-        <item>@string/pulse_color_mode_custom</item>
+        <item>@string/accent</item>
+        <item>@string/wallpaper</item>
+        <item>@string/notification</item>
+        <item>@string/custom</item>
     </string-array>
     <string-array name="ambient_pulse_color_mode_values">
         <item>0</item>
@@ -68,6 +68,17 @@
         <item>@string/battery_style_text</item>
     </string-array>
     <string-array name="statusbar_battery_style_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array name="fod_icon_tint_modes">
+        <item>@string/none</item>
+        <item>@string/accent</item>
+        <item>@string/custom</item>
+    </string-array>
+    <string-array name="fod_icon_tint_mode_values">
         <item>0</item>
         <item>1</item>
         <item>2</item>
