Ambient music: Allow for changing the music ticker position [2/2]
Signed-off-by: Pranav <npv12@iitbbs.ac.in>

--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -18,6 +18,21 @@
     android:title="@string/ambient_display_settings_title">
 
     <PreferenceCategory
+        android:title="@string/ambient_music_title">
+
+        <com.krypton.settings.preference.SettingListPreference
+            android:key="ambient_music_ticker"
+            android:title="@string/ambient_music_location"
+            android:summary="%s"
+            android:entries="@array/ambient_music_location_entries"
+            android:entryValues="@array/ambient_music_location_values"
+	          android:defaultValue="1" 
+	          settings:settingKey="ambient_music_ticker"
+            settings:settingNamespace="system"	/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/edge_lighting_category_title">
 
         <!-- Edge Light -->
