KryptonSettings: allow customising qs footer
also setup inputType attribute for SettingEditTextPreference

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -64,4 +64,13 @@
         <attr name="min" format="integer" />
         <attr name="max" format="integer" />
     </declare-styleable>
+
+    <declare-styleable name="SettingEditTextPreference">
+        <!-- Text input type
+             Available types :
+             1) integer for numbers
+             2) string for text
+        -->
+        <attr name="inputType" format="string" />
+    </declare-styleable>
 </resources>
