KryptonSettings: allow setting boolean values also as default for SettingSwitchPreference
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -29,9 +29,9 @@
 
         <!--
             Default value to return if there isn't any saved
-            Default: 0
+            Default: false or 0
         -->
-        <attr name="settingDefault" format="integer" />
+        <attr name="settingDefault" format="boolean|integer" />
 
         <!--
             Additional dependency on a setting key
