--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -40,4 +40,5 @@
     <dimen name="radio_button_spacing">6dp</dimen>
 
     <dimen name="picker_circle_preview_size">26dp</dimen>
+    <dimen name="alert_dialog_padding_material">20dp</dimen>
 </resources>
