--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -17,25 +17,18 @@
     <dimen name="default_margin">16dp</dimen>
     <dimen name="default_padding">16dp</dimen>
     <dimen name="app_icon_size">40dp</dimen>
-    <dimen name="textview_padding_default">8dp</dimen>
 
     <dimen name="rounded_corner_radius">12dp</dimen>
     <dimen name="stroke_width">2dp</dimen>
 
     <dimen name="fod_icon_button_padding">10dp</dimen>
     <dimen name="fod_anim_button_padding">5dp</dimen>
-    <dimen name="preview_margin">80dp</dimen>
-    <dimen name="selector_container_margin_bottom">20dp</dimen>
-    <dimen name="switch_padding_start">60dp</dimen>
-    <dimen name="switch_padding_end">30dp</dimen>
-    <dimen name="switch_text_size">16sp</dimen>
     <dimen name="fod_icon_preview_size">80dp</dimen>
     <dimen name="fod_anim_preview_size">200dp</dimen>
-    <dimen name="fod_list_item_size">70dp</dimen>
 
     <dimen name="color_preview_size">200dp</dimen>
     <dimen name="color_preview_padding">9dp</dimen>
     <dimen name="color_picker_button_margin_top">12dp</dimen>
-    <dimen name="radio_group_padding">18dp</dimen>
-    <dimen name="radio_button_spacing">6dp</dimen>
+
+    <dimen name="accent_preview_height">80dp</dimen>
 </resources>
