--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -68,10 +68,9 @@
 
     <style name="AccentDialogEditTextStyle">
         <item name="android:gravity">center</item>
-        <item name="android:digits">0123456789ABCDEF</item>
         <item name="android:inputType">textCapCharacters|textNoSuggestions</item>
-        <item name="android:maxLength">6</item>
         <item name="android:importantForAutofill">no</item>
+        <item name="android:textCursorDrawable">@null</item>
         <item name="android:imeOptions">actionDone</item>
         <item name="android:singleLine">true</item>
     </style>
