KryptonSettings: added font picker preference
* Users can now select the ttf files directly

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/miscellaneous_settings.xml
+++ b/res/xml/miscellaneous_settings.xml
@@ -80,4 +80,10 @@
         settings:settingKey="screenshot_sound"
         settings:settingNamespace="system"
         settings:settingDefault="1" />
+
+    <!-- Font picker -->
+    <Preference
+        android:key="font_picker_preference"
+        android:title="@string/font_picker_preference_title"
+        android:fragment="com.krypton.settings.fragment.FontPickerFragment" />
 </PreferenceScreen>
