--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -31,4 +31,6 @@
     <dimen name="color_picker_button_margin_top">12dp</dimen>
 
     <dimen name="accent_preview_height">80dp</dimen>
+
+    <dimen name="progress_bar_margin">24dp</dimen>
 </resources>
