KryptonSettings: split aod settings from edge lighting
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -116,6 +116,10 @@
             settings:settingKey="ambient_notification_light_duration"
             settings:settingNamespace="system"
             settings:settingDefault="2" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/aod_settings_category_title">
 
         <!-- Always on brightness mode -->
         <com.krypton.settings.preference.SettingSwitchPreference
