KryptonSettings: Allow scheduling always on display [2/2]
From sunset to sunrise or at a custom time

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -140,5 +140,10 @@
             settings:settingDefault="15"
             settings:max="30"
             settings:min="1" />
+
+        <Preference
+            android:key="always_on_display_schedule"
+            android:title="@string/always_on_display_schedule_title"
+            android:fragment="com.krypton.settings.fragment.AODSchedule" />
     </PreferenceCategory>
 </PreferenceScreen>
